<resources>
    <string name="app_name">Simple Morty</string>
    <string name="full_name">Full Name</string>
    <string name="image">Image</string>
    <string name="last_known_location">Last Known Location:</string>
    <string name="species">Species</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="name">Full Name</string>
    <string name="origin">Origin</string>
    <string name="location">Location</string>
    <string name="type">Type</string>
    <string name="first_seen_in">First Seen In:</string>
</resources>